Updates analysis conclusions

--- a/prompt.ipynb
+++ b/prompt.ipynb
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {
     "id": "dzNoP3o__qRG"
    },
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {
     "id": "X0vbffYg_qRH"
    },
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {
     "id": "TXofQ_DF_qRH",
     "outputId": "2fc96a2c-1112-4b54-f24f-dbb9bc88abfb"
@@ -338,7 +338,7 @@
        "[5 rows x 26 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1665,7 +1665,8 @@
    },
    "outputs": [],
    "source": [
-    "The drivers who acepted the bar coupons are more likely to have visited bars recently and are younger (although I would like to do more analysis on the age cutoff)."
+    "The drivers who accepted the bar coupons are more likely to have visited bars recently and are younger \n",
+    "(although I would like to do more analysis on the age cutoff)."
    ]
   },
   {
@@ -1949,7 +1950,11 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "The best predictor for whether someone would accept the coupon for an expensive restaurant was whether, and how often, \n",
+    "they frequented expensive restaurants generally. The more frequently users visited expensive restaurants, the more likely they were to accept\n",
+    "the coupon. Age and income did not have a noticeable impact on acceptance rate."
+   ]
   }
  ],
  "metadata": {
